# stellar-options-protocol

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md
.github/workflows/: ci.yml
contracts/interfaces/: Cargo.toml
contracts/interfaces/src/: lib.rs
contracts/liquidity-pool/: Cargo.toml
contracts/liquidity-pool/src/: lib.rs  pool.rs  test.rs
contracts/liquidity-pool/test_snapshots/test/: test_double_initialize_panics.1.json  test_initialize.1.json  test_provide_issues_shares_one_to_one.1.json
contracts/options/: Cargo.toml
contracts/options-vault/: Cargo.toml
contracts/options-vault/src/: lib.rs  test.rs
contracts/options-vault/test_snapshots/test/: test_deposit_issues_shares.1.json  test_double_initialize_panics.1.json  test_initialize.1.json
contracts/options-writer/: Cargo.toml
contracts/options-writer/src/: lib.rs  test.rs
contracts/options/src/: lib.rs  pricing.rs  storage.rs  test.rs
contracts/options/test_snapshots/test/: test_create_call_locks_collateral.1.json  test_exercise_call_swaps_tokens.1.json
contracts/price-oracle/: Cargo.toml
contracts/price-oracle/src/: lib.rs
contracts/price-oracle/test_snapshots/tests/: set_and_get_implied_vol.1.json  set_and_get_price.1.json
contracts/settlement/: Cargo.toml
contracts/settlement/src/: lib.rs
contracts/settlement/test_snapshots/tests/: test_initialize.1.json
docs/: ARCHITECTURE.md  PLAN.md
