[workspace]
resolver = "2"
members = [
    "contracts/options-writer",
    "contracts/options-vault",
    "contracts/price-oracle",
    "contracts/settlement",
]

[workspace.dependencies]
soroban-sdk = { version = "22.0.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
